@@ -1,3 +1,9 @@
+2001-12-20  Tsutomu Okada <okada@furuno.co.jp>
+
+	* [w3m-dev 02672]
+	* main.c (wrap_GC_warn_proc): msg_ring initial value
+	* main.c (SigAlarm): not need #ifdef USE_ALARM, already guarded
+
 2001-12-18  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [#493911] too few arguments to function `longjmp' 
@@ -1297,4 +1303,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.137 2001/12/17 16:18:18 ukai Exp $
+$Id: ChangeLog,v 1.138 2001/12/19 16:24:21 ukai Exp $
